Fixed bug removing the fractional digits when load widgets coordinates from xmi file.

BUG:321581